# conventional

./: .conventional.yaml  .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  setup.cfg
conventional/: __init__.py  __main__.py  cli.py  config_default.yaml  git.py  git_test.py  main.py  util.py
conventional/commands/: __init__.py  exceptions.py  list_commits.py  parse_commit.py  parse_commit_test.py  template.py
conventional/parser/: __init__.py  base.py  base_test.py  conventional_commits.py  conventional_commits_test.py
conventional/parser/conventionalcommits/: parser.py  parser_test.py
conventional/templates/: changelog.md  conventional-changelog.md  conventional-commit  slack.md
conventional/util/: config.py  confuse.py  io.py  typer.py
examples/: create-release.sh  list-commits-unable-to-be-parsed.sh  list-issues-referenced-in-commits.sh  post-unreleased-changes-to-slack.sh
