[tool.poetry]
name = "conventional"
version = "0.1.0"
description = "No frills processor for Conventional Commits (https://www.conventionalcommits.org/)"
authors = ["David Symons <david.symons@onemodel.co>"]

[tool.poetry.dependencies]
click = "^7.1.2"
click-log = "^0.3.2"
colorama = "^0.4.3"
jinja2 = "^2.11.2"
python = "^3.8"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.780"
pytest = "^5.2"

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 99
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
